Added README, Images, edited contact.html

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-logo-section">
-            <img src="../1st-project1/assets/Images/239-2392915_logo-gym-logo-png-white.png" alt="logo" />
+            <img src="assets/Images/239-2392915_logo-gym-logo-png-white.png" alt="logo" />
             <h1 class="logo">
                 ENERGY <span>FITNESS</span>
             </h1>
@@ -50,6 +50,8 @@
 
 
     <!-- Contact Content -->
+    
+
     <main class="section">
         <div class="container-fluid">
             <div class="row contactPage">
