--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Navigation Bar -->
 <header>
   <div class="header-logo-section">
-  <img src="../1st-project1/assets/Images/239-2392915_logo-gym-logo-png-white.png" alt="logo" />
+  <img src="assets/Images/239-2392915_logo-gym-logo-png-white.png" alt="logo" />
   <h1 class="logo">
     ENERGY <span>FITNESS</span>
   </h1>
@@ -37,7 +37,7 @@
         </li>
       </ul>
     </div>
-    </div>
+    
   </nav>
 </header>
 <main>
