--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-
-    <body>
+<body>
     <header>
         <div class="header-logo-section">
-            <img src="assets/images/239-2392915_logo-gym-logo-png-white.png" alt="logo" />
+            <img src="../1st-project1/assets/Images/239-2392915_logo-gym-logo-png-white.png" alt="logo" />
             <h1 class="logo">
                 ENERGY <span>FITNESS</span>
             </h1>
@@ -51,8 +50,6 @@
 
 
     <!-- Contact Content -->
-    
-
     <main class="section">
         <div class="container-fluid">
             <div class="row contactPage">
