Added images of wireframes and ui responsive

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                </button>
+                
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -92,8 +92,7 @@
                                         <div>
                                             <div class="contact-labels"><label for="email"
                                                     class="text-white form-label custom-input">Email</label></div>
-                                            <input type="email" class="form-control custom-input" id="email" name="email"
-                                                required>
+                                            <input type="email" class="form-control custom-input" id="email" name="email" required>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
