--- a/reg.html
+++ b/reg.html
@@ -28,7 +28,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            </button>
+            
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -78,7 +78,7 @@
             <label>Birth Date</label>
           </div>
           <!-- <div class="label-color">:</div> -->
-          <input type="date" class="form-control custom-input" placeholder="Enter birth date" required />
+          <input type="date" class="form-control custom-input" required />
         </div>
       </div>
       <div class="text-white form-group form-fields">
@@ -378,7 +378,7 @@
         <div> <label>Postal Code</label></div>
         <input type="number" class="form-control custom-input" placeholder="Enter postal code" required />
       </div>
-      </div>
+      
       <div class="text-white form-group form-fields">
         <div> <label>Mode of Payment</label></div>
         <div class="payment-option">
@@ -420,4 +420,4 @@
   </footer>
 </body>
 
-</html
+</html>
